--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "doc-environment",
   "version": "0.0.0",
-  "description": "Document Compilation Environment Template",
+  "description": "Document Compilation Environment",
   "main": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
